--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,10 @@
 ---
 layout: default
 ---
+
+{% include facebook-init.html %}
+
+<section class="section-main container">
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
@@ -25,8 +29,9 @@ layout: default
 
   {% if page.fbcomments %}
     <hr/>
-    <h4>Comments</h4>
-    <div class="fb-comments" data-href="https://blog.opsta.io/{{ page.url }}"></div>
+    <h3>Comments</h3>
+    <div class="fb-comments" data-href="https://blog.opsta.io/{{ page.url }}" data-width="100%" data-numposts="5"></div>
   {% endif %}
 
 </article>
+</section>
