Update About Opsta

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,6 +3,21 @@
     <div class="grid">
         <div class="box-other-site">
           <h2 class="title-box">Opsta Technical Blog</h2>
+          <div id="about-opsta">
+            <img src="/assets/imgs/opsta-logo.png" />
+            <div>
+              เราคือ open source consultant ซึ่งเน้นการเป็นทีมทาง technical ที่มีความเชี่ยวชาญทางด้าน cloud
+              infrastructure ทั้ง public/private cloud รวมถึงเทคโนโลยี container
+              โดยเฉพาะ OpenStack และ Docker/Kubernetes นอกจากนี้เรายังเป็นผู้เชี่ยวชาญทางด้าน
+              DevOps automation อันได้แก่ การทำระบบแบบ High Availability
+              และ Scalability, การทำ Continuous Integration และ Continuous
+              Delivery, การทำ monitoring ตั้งแต่ physical layer ไปจนถึง
+              application/business layer และการทำ performance load testing
+              เพื่อตอบสนองการเติบโตทางธุรกิจของคุณได้อย่างรวดเร็ว มีประสิทธิภาพ
+              และมีความน่าเชื่อถือในระดับสูงสุด
+            </div>
+          </div>
+          <div class="clear"></div>
           <div class="social-network">
             <p>
               <a href="https://facebook.com/opstacloud" target="_blank" class="icon-social"><span class="fa fa-facebook-official"></span> opsta</a>
