--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       <li><a href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a></li>
   {% endif %}
 {% endfor %}
-      <li><a href="#contact">เกี่ยวกับเรา</a></li>
+      <li><a href="#about-opsta">เกี่ยวกับเรา</a></li>
       <li><a href="https://training.opsta.io">คอร์สอบรม</a></li>
     </ul>
 {% endif %}
