--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,6 +23,29 @@ layout: default
     {{ content }}
   </div>
 
+  <div class="box">
+  <!-- Begin MailChimp Signup Form -->
+  <link href="//cdn-images.mailchimp.com/embedcode/slim-10_7.css" rel="stylesheet" type="text/css">
+  <style type="text/css">
+  	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+  	/* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+  	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+  </style>
+  <div id="mc_embed_signup">
+  <form action="//opsta.us15.list-manage.com/subscribe/post?u=1d18418b2208ab98c441ec4a4&amp;id=fe31049965" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div id="mc_embed_signup_scroll">
+  	<label for="mce-EMAIL">ชอบบล็อกของเราใช่ไหม สมัครจดหมายข่าวของเรา เพื่อให้เราส่งบทความเมื่อมีอัพเดตให้กับคุณได้ที่นี่เลย</label>
+  	<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+      <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+      <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1d18418b2208ab98c441ec4a4_fe31049965" tabindex="-1" value=""></div>
+      <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+      </div>
+  </form>
+  </div>
+  </div>
+
+  <!--End mc_embed_signup-->
+
   {% if site.disqus.shortname %}
     {% include disqus_comments.html %}
   {% endif %}
@@ -34,4 +57,5 @@ layout: default
   {% endif %}
 
 </article>
+
 </section>
