--- a/_includes/facebook-og.html
+++ b/_includes/facebook-og.html
@@ -18,7 +18,7 @@
   {% endif %}
 
   {% if page.date %}
-    <meta property="article:author" content="https://www.facebook.com/{{ site.author.facebook }}">
+    <meta property="article:author" content="https://www.facebook.com/{{ site.data.authors[page.author_github].facebook }}">
     <meta property="article:modified_time" content="{% if page.last_modified_at %}{{ page.last_modified_at | date_to_xmlschema }}{% else %}{{ page.date | date_to_xmlschema }}{% endif %}">
     <meta property="article:published_time" content="{{ page.date | date_to_xmlschema }}">
     {% for post in site.related_posts limit:3 %}
